--- a/API/package.json
+++ b/API/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.1.1"
   },
   "devDependencies": {
