--- a/API/package.json
+++ b/API/package.json
@@ -8,9 +8,13 @@
     "express": "^4.16.3",
     "mongoose": "^5.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "sinon": "^5.0.10"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC"
