--- a/API/package.json
+++ b/API/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mongoose": "^5.1.1"
   },
   "devDependencies": {
