--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "sinon": "^5.0.10"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC"
