--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "lodash": "^4.17.10",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.1.1"
+    "lodash": "^4.17.10",
+    "mongoose": "^5.1.1",
+    "multer": "^1.3.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
