--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.10",
     "mongoose": "^5.1.1",
-    "multer": "^1.3.1"
+    "multer": "^1.3.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "chai": "^4.1.2",
