--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.10",
     "mongoose": "^5.1.1",
+    "mongoose-paginate": "^5.0.3",
     "multer": "^1.3.1",
     "path": "^0.12.7"
   },
