--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.10",
     "mongodb": "^3.1.10",
-    "mongoose": "^5.1.1",
+    "mongoose": "5.1.1",
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.3.1",
     "node-fetch": "^2.3.0",
