--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "expo-server-sdk": "^2.4.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
-    "lodash": "^4.17.10",
-    "mongoose": "5.1.1",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.4.19",
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.3.1",
     "node-fetch": "^2.3.0",
