--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
-    "sinon": "^5.0.10"
+    "sinon": "^5.1.1"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --recursive",
     "start": "node app.js"
   },
   "author": "",
