--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.3.1",
     "node-fetch": "^2.3.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sinon-mongoose": "^2.2.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
+    "nyc": "^13.3.0",
     "sinon": "^5.1.1"
   },
   "scripts": {
-    "test": "mocha --recursive",
+    "test": "nyc mocha --recursive",
     "start": "node app.js"
   },
   "author": "",
