--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "multer": "^1.3.1",
     "node-fetch": "^2.3.0",
     "path": "^0.12.7",
-    "sinon-mongoose": "^2.2.1"
+    "sinon-mongoose": "^2.2.1",
+    "sharp": "^0.22.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
