Add eslint config and update repo to satisfy it (#91)
* Add eslint config and update repo

* Fix build config

* update gitignore

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,8 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-
+      
+      - run: npx eslint . 
       - run: npm test
 
   deploy:
