--- a/package.json
+++ b/package.json
@@ -17,28 +17,18 @@
     "multer": "^1.3.1",
     "node-fetch": "^2.3.0",
     "path": "^0.12.7",
-    "sharp": "^0.22.1",
-    "sinon-mongoose": "^2.2.1"
+    "sinon-mongoose": "^2.2.1",
+    "sharp": "^0.22.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/node": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/register": "^7.0.0",
     "chai": "^4.1.2",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2",
     "mocha": "^5.2.0",
-    "nodemon": "^1.19.0",
     "nyc": "^13.3.0",
     "sinon": "^5.1.1"
   },
   "scripts": {
-    "test": "nyc mocha --recursive --require @babel/polyfill --require @babel/register",
-    "start": "nodemon --exec babel-node app.js"
+    "test": "nyc mocha --recursive",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC"
