--- a/package.json
+++ b/package.json
@@ -21,12 +21,6 @@
     "sinon-mongoose": "^2.2.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/node": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/register": "^7.0.0",
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -37,8 +31,8 @@
     "sinon": "^5.1.1"
   },
   "scripts": {
-    "test": "nyc mocha --recursive --require @babel/polyfill --require @babel/register",
-    "start": "nodemon --exec babel-node app.js"
+    "test": "nyc mocha --recursive",
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC"
