--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.3.1",
     "node-fetch": "^2.3.0",
+    "nodemailer": "^6.3.0",
     "path": "^0.12.7",
     "sharp": "^0.22.1",
     "sinon-mongoose": "^2.2.1"
