Fix node_env issue

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "test": "nyc mocha --recursive",
-    "start": "nodemon app.js"
+    "start": "NODE_ENV=development nodemon app.js"
   },
   "author": "",
   "license": "ISC"
