--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "agenda": "^2.0.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "crypto": "^1.0.1",
     "date-fns": "^1.29.0",
     "expo-server-sdk": "^2.4.0",
     "express": "^4.16.3",
@@ -16,7 +17,7 @@
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.3.1",
     "node-fetch": "^2.3.0",
-    "nodemailer": "^6.3.0",
+    "nodemailer": "^6.4.2",
     "path": "^0.12.7",
     "sharp": "^0.22.1",
     "sinon-mongoose": "^2.2.1"
