--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "node-fetch": "^2.3.0",
     "nodemailer": "^6.4.2",
     "path": "^0.12.7",
-    "sharp": "^0.22.1",
+    "sharp": "^0.24.0",
     "sinon-mongoose": "^2.2.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
-    "eslint-utils": ">=1.4.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
+    "eslint-utils": ">=1.4.1",
+    "inquirer": "^7.0.5",
     "mocha": "^5.2.0",
     "nodemon": "^1.19.0",
     "nyc": "^13.3.0",
@@ -35,7 +36,7 @@
   },
   "scripts": {
     "test": "nyc mocha --recursive",
-    "start": "NODE_ENV=local nodemon app.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC"
