--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
-version: 2
+version: 2.1
+
 jobs:
   build:
     docker:
@@ -21,5 +22,11 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       
-      - run: npx eslint . 
+      - run: npm run-script code-format-check
+
       - run: npm test
+
+      - run: npm run coverage
+
+      - store_artifacts:
+          path: coverage
