--- a/package.json
+++ b/package.json
@@ -24,20 +24,38 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "coveralls": "^3.0.9",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-utils": ">=1.4.1",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.8",
     "inquirer": "^7.0.5",
     "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.0",
     "nyc": "^13.3.0",
+    "prettier": "1.19.1",
     "sinon": "^5.1.1"
   },
   "scripts": {
     "test": "nyc mocha --recursive",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "code-format": "npx eslint \"./**/*.js\" --fix && npx prettier \"./**/*.js\" --write",
+    "code-format-check": "npx eslint \"./**/*.js\" && npx prettier \"./**/*.js\" --check",
     "start": "nodemon app.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
+  }
 }
